[package]
name = "pbinspect"
version = "0.1.0"
edition = "2021"

[dependencies]
gloo-file = { version = "0.3.0", features = ["futures"] }
leptos = { version = "0.8.2", features = ["csr"] }
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.77", features = ["Clipboard", "ClipboardItem", "Navigator"] }
